# church-meeting-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
data/meetings/: README.md
docs/: handoff_brief.md  phase2b_plan.md
src/church_assistant/: add_voice_profile.py  analyze_transcript.py  build_voice_profiles.py  chunked_analyze.py  diarization.py  diarization_audit.py  diarization_audit_v2.py  extract_test_segments.py  find_gaps.py  index_meeting.py  inspect_pipeline.py  match_speakers.py  merge_transcript.py  minimal_test.py  new_meeting.py  polish_protocol.py  query.py  test_embeddings.py  test_profile_uniqueness.py  test_segment_matching.py  transcribe.py  verify_danylos.py
src/church_assistant/bot/: __init__.py  config.py  delivery.py  formatting.py  main.py
src/church_assistant/bot/handlers/: __init__.py  admin.py  help.py  query.py  verbose.py
src/church_assistant/bot/middleware/: __init__.py  whitelist.py
src/church_assistant/db/: connection.py  ingestion_jobs_repo.py  logs_repo.py  queries_repo.py  schema.sql  users_repo.py
src/church_assistant/ingestion/: __init__.py  config.py  main.py  paths.py  processor.py  speakers.py  stages.py
src/church_assistant/scripts/: __init__.py  add_user.py  init_db.py
src/church_assistant/shared/: health.py  logger.py  meetings_index.py  rag.py
src/church_assistant/web/: __init__.py  main.py
src/church_assistant/web/routes/: dashboard.py  history.py  home.py  ingest.py  meetings.py  query.py  (+1 more)
src/church_assistant/worker/: __init__.py  config.py  main.py  processor.py
(+16 files in other folders)
