[project]
name = "church-meeting-assistant"
version = "0.1.0"
description = "Transcribe, diarize and summarize church meeting recordings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "ollama>=0.6.2",
    "omegaconf>=2.3.0",
    "pdfplumber>=0.11.9",
    "pyannote-audio>=4.0.4",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "voyageai>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/church_assistant"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
